css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap');

/* general */

.sr-only {
  color: transparent;
}

.flex {
  display: flex;
  gap: var(--gap, 1.5rem);
}

/* set up the body */
body {
  overflow-x: hidden;
  background-color: black;
  margin: 0;
  font-family: 'Roboto Mono', monospace;
  font-weight: 400;
  font-size: 16px;
  color: #ecf0f1;
  text-decoration: none;
}

/* primary header */

.primary-header {
  background-color: black;
  background-image: url("../img/project-index.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  /* background-blend-mode: multiply; */
  flex-wrap: wrap;
  /* align-items: center; */
  /* padding: 2rem; */
  /* padding-top: 2rem; */
  height: 100vh;
  width: 100vw;
}

.top-header {
  flex-basis: 100%;
  gap: var(--gap, 3.5rem);
  justify-content: center;
}

.logo{
  padding-top: 2rem;
  height: fit-content;
  /* width: 6rem; */
  /* height: 2.5rem; */
}

.logo a {
  font-weight: 700;
  font-size: 30px;
  color: #ecf0f1;
  text-decoration: none;
}

.mobile-nav-toggle {
  display: none;
}

.primary-navigation {
  list-style: none;
  display: flex;
  padding: 0;
  padding-top: 2.75rem;
  margin: 0;
}

.primary-navigation li a {
  transition: all 0.3s ease 0s;
}

.primary-navigation li a:hover {
  color: #0088a9;
}

.primary-navigation a {
  font-weight: 700;
  font-size: 14px;
  color: #ecf0f1;
  text-decoration: none;
}

@media (max-width: 75em) {
  .logo {
    z-index: 2000;
    padding-top: 0.75rem;
    padding-left: 2rem;
  }

  .primary-navigation {
    /* gap: var(--gap, 0.75rem); */
    position: fixed;
    z-index: 1000;
    inset: 0 0 0 30%;
    flex-direction: column;
    align-items: flex-end;
    padding: min(30vh, 5rem) 3rem;
    background: black;

    transform: translateX(100%);
    transition: transform 350ms ease-out;
  }

  .primary-navigation li a {
    display: block;
    width: 50vw;
    border-bottom: 1px solid rgb(47, 47, 47);
    text-align: end;
  }

  .primary-navigation[data-visible="true"] {
    transform: translateX(0%)
  }

  .mobile-nav-toggle {
    display: block;
    position: absolute;
    z-index: 9999;
    background-color: transparent;
    background-image: url("../img/Hamburger_icon_white.svg");
    background-size: contain;
    background-repeat: no-repeat;
    width: 1.25rem;
    border: 0;
    aspect-ratio: 1;
    top: 1.5rem;
    right: 1.5rem;
  }

  .mobile-nav-toggle[aria-expanded="true"] {
    background-image: url("../img/Cross_icon_white.svg");
    width: 1rem;
  }

}

/* index slides */

/* setting up background image settings */

.index-slide {
  background-color: black;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  height: 100vh;
  width: 100vw;
}

/* setting up slide text */

.slide-content {
  padding-left: 8vw;
  padding-bottom: 18vh;
  align-self: flex-end;
}

.slide-content h2 {
  font-size: 20px;
  font-weight: 400;
  margin: 0;
  margin-bottom: 0.5rem;
}

.slide-content h1 {
  font-size: 36px;
  font-weight: 700;
  margin: 0;
  margin-bottom: 3rem;
  word-wrap: normal;
}

.slide-content a {
  font-weight: 700;
  font-size: 14px;
  color: #ecf0f1;
  text-decoration: none;
  margin: 0;
  padding: 1rem 2.25rem;
  border: 3px solid #ecf0f1;
  transition: all 0.3s ease 0s;
}

.slide-content a:hover {
  color: black;
  background-color: #ecf0f1;
}

/* slides from below header */

.task1 {
  background-image: url("../img/task1-index.jpg");
}

.task2 {
  background-image: url("../img/task2-index.jpg");
}

.task3 {
  background-image: url("../img/task3-index.jpg");
  background-position: bottom;
}

.task4 {
  background-image: url("../img/task4-index.jpg");
  background-position: left;
}

.task5 {
  background-image: url("../img/task5-index.jpg");
}

.task7 {
  background-image: url("../img/task7-index.jpg");
}

.task8 {
  background-image: url("../img/task8-index.jpg");
}

.task9 {
  background-image: url("../img/task9-index.jpg");
}

.task10 {
  background-image: url("../img/task10-index.jpg");
}

.task11 {
  background-image: url("../img/task11-index.jpg");
}

/* setting up other pages */

.page-start {
  flex-grow: 1;
}

.page-start h1 {
  font-size: 56px;
  font-weight: 700;
  margin: 0;
  margin-left: 5vw;
  margin-right: 5vw;
  word-wrap: normal;
  text-align: center;
}

.page-start h2 {
  font-size: 16px;
  font-weight: 400;
  margin: 2vh;
  word-wrap: normal;
  text-align: center;
}

.page-content {
  text-align: justify;
  padding-bottom: 1vh;
  padding-top: 8vh;
  padding-left: 8vw;
  padding-right: 8vw;

}

/* footer */

footer {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 5rem;
  font-size: 12px;
  flex-wrap: wrap;
}

footer p {
  padding-left: 2rem;
  padding-right: 2rem;
}

